Replace low-level HTTP with RestTemplate